# simple-game

./: .gitignore  README.md
simple_backend/: docker-compose.yml  main.py  pyproject.toml  seed.py
simple_backend/alembic/: env.py
simple_backend/alembic/versions/: 2a489523739b_optional_email_password.py  86c38a9c349c_initial.py  cb0ceb0775ef_add_member_count.py
simple_backend/mcp_server/tools/: __init__.py  team_tools.py  user_tools.py
simple_backend/src/configs/: __init__.py  app.py  business_logic.py  chat.py
simple_backend/src/constants/: __init__.py  user.py
simple_backend/src/controllers/: __init__.py  ai_controller.py  auth.py  team_controller.py  user_controller.py
simple_backend/src/database/: __init__.py  session.py  user.py
simple_backend/src/errors/: __init__.py  generic.py
simple_backend/src/middlewares/: __init__.py  exception.py  logging.py
simple_backend/src/models/: __init__.py  action_context.py  team.py  user.py
simple_backend/src/routers/: __init__.py  router.py
simple_backend/src/schemas/: __init__.py  ai.py  team.py  user.py
simple_backend/src/services/: __init__.py  auth_service.py  team_service.py  user_service.py
simple_backend/src/services/chat_service/graph/: main_graph.py  orchestrator.py  responder.py  router.py
simple_backend/src/services/chat_service/prompts/: __init__.py  responder_prompt.py  router_prompt.py  supervisor_prompts.py
simple_backend/src/utils/: __init__.py  common.py  error.py  http.py  security.py  validation.py
simple_backend/tests/: conftest.py  test_teams.py  test_unit.py  test_users.py
(+21 files in other folders)
